# trajectorize

./: .gitignore  MANIFEST.in  README.md  makefile  pyproject.toml  requirements-testing.txt  setup.cfg  setup.py
.github/workflows/: trajectorize_build_and_test.yml
include/: conic_kepler.h  delta_v_estimate.h  keplerian_element_types.h  keplerian_elements.h  kerbol_system_bodies.h  kerbol_system_ephemeris.h  kerbol_system_types.h  ksp_time.h  lambert.h  orbit_math.h  orbit_math_types.h  planetary_keplerian_elements.h  rotations.h  state_vector_types.h  stumpuff_functions.h  trajectory_optimizers.h  transfer_orbit.h  universal_kepler.h  vec_math.h  vec_math_types.h
scripts/: generate_plots.sh
src/browser_interface/: README.md  browser_main.c  index.html  makefile
src/browser_interface/scripts/: pre_init.js  transfer_calculator.js
src/trajectorize/: __init__.py
src/trajectorize/c_ext_utils/: build_c_extension.py  c_parsing.py  extract_arrays.py  process_sva_buffer.py
src/trajectorize/demos/: kerbin_duna_porkchop.py  kerbin_duna_transfer.py  kerbol_system.py  kerbol_system_anim.py  orbit.py  porkchop.py  single_transfer.py
src/trajectorize/ephemeris/: kerbol_system.py  kerbol_system_bodies.c  kerbol_system_ephemeris.c  state_vector.py
src/trajectorize/ksp_time/: ksp_time.c  mpl_formatters.py  (+1 more)
test/: test_c_conic_kepler.py  test_c_kepler_equation_solver.py  test_c_kerbol_system.py  test_c_universal_kepler.py  test_conic_kepler.py  test_lambert.py  test_transfer_orbit.py  test_universal_kepler.py
test/low_level_c/: test_hyperbolic_fitter.py  test_kepler_solvers.py  test_stumpuff_functions.py  test_vec_math.py
test/python_wrapper/: test_conic_kepler.py  test_kerbol_system.py  test_time.py  test_transfer_orbit.py
trajectorize/c_ext_utils/: build_c_extension.py  c_parsing.py
trajectorize/demos/: kerbol_system anim.py  kerbol_system_anim.py  orbit.py
trajectorize/ephemeris/: build_c_kerbol_system.py  kerbol_system.py  kerbol_system_bodies.c  kerbol_system_ephemeris.c  state_vector.py
trajectorize/include/: kepler_equation_solver.h  keplerian_elements.h  kerbol_system_types.h  orbit_math.h  rotations.h  universal_kepler.h
trajectorize/math_lib/: math_interfaces.py  orbit_math.c  rotations.c
trajectorize/orbit/: build_c_conic_kepler.py  build_c_kepler_equation_solver.py  build_c_universal_kepler.py  conic_kepler.c  conic_kepler.py  kepler_equation_solver.c  kepler_equation_solver.py  universal_kepler.c  universal_kepler.py
trajectorize/setup_utils/: c_parsing.py
trajectorize/trajectory/: lambert.c
trajectorize/visualizers/: body_systems.py  celestial_body_plot.py
(+24 files in other folders)
