[metadata]
name = trajectorize
version = 0.0.1
description = KSP Trajectory Optimization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/itchono/trajectorize
license = LGPLv3
license_files =
    LICENSE
author = Mingde Yin
author_email = mdsuper@hotmail.com
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    cffi >= 1.15.0
    numpy >= 1.24.0
    matplotlib >= 3.6.0
setup_requires =
    cffi >= 1.15.0

[options.packages.find]
where = src